Solve text align center error in first section

--- a/css/styles.css
+++ b/css/styles.css
@@ -385,6 +385,10 @@ footer p {
     .info-personal {
         align-items: center;
     }
+
+    h1, h2 {
+        text-align: center;
+    }
 }
 
 
